# Detectron2_ros

./: package.xml  setup.cfg  setup.py
config/: detectron2_ros.yaml
detectron2_ros/: detectron2_ros.py
launch/: detectron2_ros.launch.py
