<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>detectron2_ros</name>
  <version>0.1.0</version>
  <description>The detectron2_ros package</description>

  <maintainer email="davfercha@uma.es">David Fernandez Chaves</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/DavidFernandezChaves/Detectron2_ros</url>

  <author email="davfercha@uma.es">David Fernandez Chaves</author>
  <author>David Fernandez Chaves</author>


  <buildtool_depend>ament_python</buildtool_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
  
  <depend>rclpy</depend>
  <depend>message_generation</depend>
  <depend>sensor_msgs</depend>

  <!--
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  -->
</package>
